--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,12 @@
         <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
     </head>
 <body>
-    
+    <!-- fragment 적용 -->
+    <div class="container" th:replace="fragment/header(title='SCIT 게시판')"></div>
+
+    <div class="container">
+        <a href="./board/boardList.html" th:href="@{/board/boardList}">게시판</a>
+    </div>
+
 </body>
 </html>
